--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,27 @@
 {
-  "short_name": "Financiamiento Tupak Rantina",
+  "short_name": "Tupak Rantina",
   "name": "Financiamiento Tupak Rantina",
   "icons": [
     {
-      "src": "https://i.ibb.co/JR9P9YJf/T-tulo-primario.png",
+      "src": "/finaciamientos/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://i.ibb.co/JR9P9YJf/T-tulo-primario.png",
+      "src": "/finaciamientos/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "/finaciamientos/maskable_icon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "start_url": "/finaciamientos/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#012063"
+  "theme_color": "#012063",
+  "scope": "/finaciamientos/"
 }
