--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Tupak Rantina",
-  "name": "Financiamiento Tupak Rantina",
+  "name": "Financiamiento Tupak Rantina.",
   "icons": [
     {
       "src": "/finaciamientos/icon-192x192.png",
